--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <html xmlns=http://www.w3.org/1999/xhtml>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-<title>mathieuravaux's Git Achievements</title>
+<title>Mathieu Ravaux's Git Achievements</title>
 <link rel="alternate" type="application/rss+xml" title="rss feed" href="index.rss"/>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 </head>
 <body>
 
-<h2>mathieuravaux's Git Achievements</h2>
-Unlocked       12/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 59 points<br>
+<h2>Mathieu Ravaux's Git Achievements</h2>
+Unlocked       13/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 61 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -35,32 +36,32 @@ Unlocked       12/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-2684 rev-parse
-2643 symbolic-ref
-  81 status
-  41 push
-  37 diff
-  30 up
+2853 rev-parse
+2812 symbolic-ref
+  85 status
+  43 push
+  40 diff
+  33 up
   19 stash
   17 st
   16 checkout
   15 add
-  11 config
+  13 config
    8 remote
    6 branches
    6 achievements
    5 init
    4 rebase
+   4 clone
    3 pull
    3 fetch
-   3 clone
    2 submodule
    2 rm
+   2 merge
    2 instaweb
    2 commit
    2 branch
    1 pul
-   1 merge
    1 ignore
    1 co
 </pre>
@@ -75,7 +76,6 @@ function showLocked() {
 There are       50 Achievements. Some achievements can be leveled up depending on the number of times it is used (Used 2 times = level 1, 4 = level 2, 8 = level 3, 16 = level 4, 32 = level 5, etc)
 <ul>
 <li><div class="title">Archivist</div><div class="info">Prepare each commit with its patch in one file per commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-format-patch.html">git-format-patch</a></div></li>
-<li><div class="title">Banker</div><div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Baptised</div><div class="info">Set global user name using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Beach Lion</div><div class="info">Restricted login shell for GIT-only SSH access with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-shell.html">git-shell</a></div></li>
 <li><div class="title">Butcher</div><div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
