--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 75 points<br>
+Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 81 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -37,31 +37,33 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-3550 rev-parse
-3507 symbolic-ref
- 121 status
-  54 diff
-  46 push
-  35 up
-  21 checkout
-  19 stash
+4107 rev-parse
+4064 symbolic-ref
+ 145 status
+  62 diff
+  52 push
+  40 up
+  26 checkout
+  20 stash
+  20 add
   18 st
   18 remote
-  18 add
-  15 config
-   7 init
+  16 config
+   8 init
    6 branches
    6 achievements
+   5 clone
    4 submodule
    4 rebase
-   4 clone
    3 pull
    3 fetch
    3 commit
+   2 tag
    2 rm
    2 merge
    2 instaweb
