--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 81 points<br>
+Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -36,41 +36,44 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Stone Mason (Level 5)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Student</div>  <div class="info">Accessed the documentation for a command with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-.html">git-</a>[command] --help</div></li>
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-4107 rev-parse
-4064 symbolic-ref
- 145 status
-  62 diff
-  52 push
-  40 up
-  26 checkout
-  20 stash
-  20 add
-  18 st
-  18 remote
+5239 rev-parse
+5183 symbolic-ref
+ 172 status
+  72 diff
+  64 push
+  48 up
+  29 checkout
+  25 add
+  24 stash
+  20 st
+  19 remote
   16 config
    8 init
+   6 submodule
+   6 clone
    6 branches
    6 achievements
-   5 clone
-   4 submodule
-   4 rebase
+   5 rebase
+   3 rm
    3 pull
    3 fetch
    3 commit
    2 tag
-   2 rm
    2 merge
    2 instaweb
    2 branch
    1 pul
    1 ignore
    1 co
+   1 Ven
+   1 Jeu
 </pre>
 <script type="text/javascript">
 function showLocked() {
