--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 88 points<br>
+Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 91 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 3)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
@@ -43,17 +44,17 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-5239 rev-parse
-5183 symbolic-ref
- 172 status
-  72 diff
-  64 push
-  48 up
+5588 rev-parse
+5532 symbolic-ref
+ 196 status
+  78 diff
+  68 push
+  54 up
+  36 add
+  30 stash
   29 checkout
-  25 add
-  24 stash
-  20 st
-  19 remote
+  23 st
+  20 remote
   16 config
    8 init
    6 submodule
@@ -61,17 +62,18 @@ Git commands sorted by usage:
    6 branches
    6 achievements
    5 rebase
+   4 commit
    3 rm
    3 pull
    3 fetch
-   3 commit
    2 tag
    2 merge
    2 instaweb
+   2 co
    2 branch
+   1 revert
    1 pul
    1 ignore
-   1 co
    1 Ven
    1 Jeu
 </pre>
