--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 91 points<br>
+Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 94 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -21,6 +21,7 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -44,37 +45,43 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-5588 rev-parse
-5532 symbolic-ref
- 196 status
-  78 diff
-  68 push
-  54 up
-  36 add
+6709 rev-parse
+6656 symbolic-ref
+ 230 status
+ 100 push
+  85 diff
+  63 up
+  46 add
+  41 Mer
+  32 st
+  32 remote
   30 stash
-  29 checkout
-  23 st
-  20 remote
+  30 checkout
   16 config
-   8 init
+  11 Mar
+  10 init
+   7 clone
    6 submodule
-   6 clone
    6 branches
    6 achievements
+   5 rm
    5 rebase
-   4 commit
-   3 rm
+   5 commit
+   4 fetch
+   4 ci
    3 pull
-   3 fetch
    2 tag
    2 merge
    2 instaweb
    2 co
    2 branch
    1 revert
+   1 reset
    1 pul
    1 ignore
+   1 gc
    1 Ven
+   1 Lun
    1 Jeu
 </pre>
 <script type="text/javascript">
