--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 101 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 103 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -22,6 +22,7 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
+<li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -46,44 +47,45 @@ Unlocked       15/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-6749 rev-parse
-6697 symbolic-ref
- 237 status
- 102 push
-  91 diff
-  63 up
-  48 add
+6878 rev-parse
+6818 symbolic-ref
+ 266 status
+ 105 push
+ 104 diff
+  64 up
+  53 add
   46 Mer
-  33 st
+  37 st
+  34 checkout
   33 remote
   30 stash
-  30 checkout
   16 config
   11 Mar
   10 init
    7 clone
    6 submodule
+   6 rebase
    6 branches
    6 achievements
    5 rm
-   5 rebase
    5 commit
+   5 ci
    4 fetch
-   4 ci
+   4 co
    3 pull
    2 tag
    2 merge
    2 instaweb
-   2 co
    2 branch
+   2 Jeu
    1 revert
    1 reset
    1 pul
+   1 log
    1 ignore
    1 gc
    1 Ven
    1 Lun
-   1 Jeu
 </pre>
 <script type="text/javascript">
 function showLocked() {
@@ -110,7 +112,6 @@ There are       50 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">Gardner</div><div class="info">Shows the commit ancestry graph with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show-branch.html">git-show-branch</a></div></li>
 <li><div class="title">Gipsy</div><div class="info">Create, list, delete a tag signed with GPG using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-tag.html">git-tag</a></div></li>
 <li><div class="title">Goldsmith</div><div class="info">Reviewed patches before committing with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-diff.html">git-diff</a> --cached.</div></li>
-<li><div class="title">Historian</div><div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Homeowner</div><div class="info">Set global email address using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-config.html">git-config</a>.</div></li>
 <li><div class="title">Hunter</div><div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-bisect.html">git-bisect</a> to perform a binary search to find which change introduced a bug.</div></li>
 <li><div class="title">Inventor ($1)</div><div class="info">Used a command that isn't part of the built in Git command</div></li>
