--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 103 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 109 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -37,6 +37,7 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
+<li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 6)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
@@ -47,45 +48,46 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-6878 rev-parse
-6818 symbolic-ref
- 266 status
- 105 push
- 104 diff
-  64 up
-  53 add
+7318 rev-parse
+7258 symbolic-ref
+ 294 status
+ 114 push
+ 111 diff
+  69 up
+  56 add
   46 Mer
   37 st
-  34 checkout
-  33 remote
-  30 stash
+  36 remote
+  36 checkout
+  32 stash
   16 config
   11 Mar
   10 init
    7 clone
    6 submodule
    6 rebase
+   6 fetch
    6 branches
    6 achievements
    5 rm
    5 commit
    5 ci
-   4 fetch
    4 co
+   4 Lun
    3 pull
    2 tag
    2 merge
+   2 log
    2 instaweb
    2 branch
+   2 Sam
    2 Jeu
    1 revert
    1 reset
    1 pul
-   1 log
    1 ignore
    1 gc
    1 Ven
-   1 Lun
 </pre>
 <script type="text/javascript">
 function showLocked() {
