--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 117 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 120 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -23,6 +23,7 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Historian (Level 1)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
+<li><div class="title">Apprentice Historian (Level 2)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 3)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -49,11 +50,11 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-7620 rev-parse
-7558 symbolic-ref
+7630 rev-parse
+7568 symbolic-ref
  310 status
  130 diff
- 128 push
+ 129 push
   70 up
   57 add
   46 Mer
@@ -64,7 +65,7 @@ Git commands sorted by usage:
   16 config
   16 Mar
   10 init
-   7 pull
+   9 pull
    7 commit
    7 clone
    6 submodule
@@ -76,9 +77,9 @@ Git commands sorted by usage:
    5 ci
    4 co
    4 Lun
+   3 log
    2 tag
    2 merge
-   2 log
    2 instaweb
    2 branch
    2 Sam
