--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
 
 <h2>Mathieu Ravaux's Git Achievements</h2>
-Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 120 points<br>
+Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 124 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 3)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 1)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Author (Level 2)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Apprentice Author (Level 3)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Apprentice Banker (Level 1)</div>  <div class="info">Join two or more development histories together with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-merge.html">git-merge</a>.</div></li>
 <li><div class="title">Apprentice Blacksmith (Level 1)</div>  <div class="info">Created a branch using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-checkout.html">git-checkout</a> -b.</div></li>
 <li><div class="title">Apprentice Cathedral Worker (Level 1)</div>  <div class="info">Cloned submodule repository and checked out commits specified by superproject.</div></li>
@@ -50,13 +51,14 @@ Unlocked       16/      50 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-7630 rev-parse
-7568 symbolic-ref
- 310 status
+7895 rev-parse
+7835 symbolic-ref
+ 313 status
+ 195 push
  130 diff
- 129 push
-  70 up
+  72 up
   57 add
+  56 pull
   46 Mer
   38 st
   38 remote
@@ -64,29 +66,28 @@ Git commands sorted by usage:
   35 stash
   16 config
   16 Mar
+  11 Jeu
   10 init
-   9 pull
-   7 commit
+   8 commit
    7 clone
    6 submodule
+   6 rm
    6 rebase
    6 fetch
    6 branches
    6 achievements
-   5 rm
    5 ci
    4 co
    4 Lun
+   3 pul
    3 log
    2 tag
    2 merge
    2 instaweb
    2 branch
    2 Sam
-   2 Jeu
    1 revert
    1 reset
-   1 pul
    1 ignore
    1 gc
    1 blame
